@@ -76,4 +76,15 @@ public class SystemClassUser {
         final String result = toString.replaceAll("-", "");
         return result;
 	}
+    
+    public int lengthOf(StringBuilder to){
+        // The trick here is the casting to CharSequence,
+        // this is to test that the runtime type(StringBuilder) is checked for mocked calls and not
+        // the compile-time type (CharSequence)
+        return lengthOf((CharSequence) to);
+	}
+	
+    private int lengthOf(CharSequence to){
+        return to.length();
+    }
 }
