@@ -4,6 +4,9 @@ Change log next version
 * PowerMockRunner now supports both MethodRules and TestRules to comply with JUnit 4.11 (thanks to "Boris Code" for the patch) (issue 419).
 * Slf4j MockPolicy in Mockito now works again (issue 431).
 * Removed synchronized from all MockGateway methods in order to make it work with multi-threaded Mockito.
+* The PowerMock runner for JUnit now supports assumeTrue(..) statements (issue 408).
+* Mocked system classes are now invoked when it's casted into another (non-final) type (thanks to Jonatan Jonsson for the patch) (issue 445).
+* TestNG state is cleaned up in a better way when a test fails (thanks to Jonatan Jonsson for the patch).
 
 Change log 1.5 (2012-12-04)
 ---------------------------
